[gd_scene load_steps=3 format=2]

[ext_resource path="res://Sprites/HUD/hud0.png" type="Texture" id=1]
[ext_resource path="res://Scripts/HUD/HUD.gd" type="Script" id=2]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="UpBar" type="ColorRect" parent="."]
margin_right = 960.0
margin_bottom = 95.0
rect_pivot_offset = Vector2( 480, 0 )
color = Color( 0, 0, 0, 1 )

[node name="DownBar" type="ColorRect" parent="."]
margin_top = 445.0
margin_right = 960.0
margin_bottom = 540.0
rect_pivot_offset = Vector2( 480, 95 )
color = Color( 0, 0, 0, 1 )

[node name="Hud0" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
centered = false
